# web-livekit_kontext

./: .gitignore  README.md  generate-token.js  jest.config.js  jest.setup.ts  package-lock.json  package.json  pnpm-lock.yaml  test-livekit-connection.js
.kiro/specs/beyondpresence-video-streaming/: design.md  requirements.md  tasks.md
python-agent/: README.md  agent.py  agent_openai.py  pyproject.toml  requirements.txt  run-uv.sh  run.sh  stop.sh
src/app/: page.tsx
src/app/api/beyondpresence/session/: route.ts
src/app/api/livekit/token/: route.ts
src/lib/: livekit-token-info.md
src/lib/beyondpresence/: index.ts
src/lib/beyondpresence/components/: .gitkeep  AudioContainer.tsx  BeyondPresenceStream.tsx  ConnectionStatus.tsx  VideoContainer.tsx
src/lib/beyondpresence/components/__tests__/: AudioContainer.test.tsx  BeyondPresenceStream.test.tsx  ConnectionStatus.test.tsx  VideoContainer.test.tsx
src/lib/beyondpresence/hooks/: .gitkeep  useBeyondPresence.ts
src/lib/beyondpresence/hooks/__tests__/: useBeyondPresence.test.ts
src/lib/beyondpresence/services/: .gitkeep  BeyondPresenceService.ts  LiveKitService.ts
src/lib/beyondpresence/services/__tests__/: BeyondPresenceService.test.ts  LiveKitService.test.ts
src/lib/beyondpresence/types/: index.ts
src/lib/beyondpresence/utils/: browserCompat.ts  errorHandling.ts  logger.ts
src/lib/beyondpresence/utils/__tests__/: browserCompat.test.ts  errorHandling.test.ts
